--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "hono": "4.11.5",
     "jotai": "2.16.2",
     "lucide-react": "0.563.0",
+    "mermaid": "^11.12.2",
     "minisearch": "7.2.0",
     "parse-git-diff": "0.0.19",
     "prexit": "2.3.0",
